fud2/tests/snapshots/tests__test@plan_icarus-refmem.snap
---
source: fud2/tests/tests.rs
description: "emit plan: icarus-refmem"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

auxin = $calyx-base/target/debug/auxin
rule hex-data
  command = $auxin $in --from json --to dat -o $out
rule json-data
  command = $auxin -e out $in --from dat --to json -o $out
build legacy_data.jq: get-rsrc
rule json-data-cleanup
  command = awk '/Simulated/ {print $$2}' $log | xargs jq -f legacy_data.jq $in --argjson cycles > $out
sim_data = /test/data.json
datadir = sim_data
build $datadir: hex-data $sim_data
rule sim-run
  command = ./$bin +DATA=$datadir +CYCLE_LIMIT=$cycle-limit $args > $out || (cat $out >&2 && false)
cycle-limit = 500000000

iverilog = iverilog
rule icarus-compile-standalone-tb
  command = $iverilog -g2012 -s toplevel -o $out tb.sv $in
rule icarus-compile-custom-tb
  command = $iverilog -g2012 -s toplevel -o $out tb.sv memories.sv $in

build /output.ext: icarus-compile-custom-tb /input.ext | tb.sv memories.sv

default /output.ext
